# nicegui-calculator

./: README.md  pyproject.toml
src/nicegui_calculator/: __init__.py  __main__.py  calculator.py  main.py
src/tests/: test_calculator.py
