[project]
authors = [{name = "Saito Tsutomu", email = "tsutomu7@hotmail.co.jp"}]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "nicegui>=2.9.1",
  "pywebview>=5.3.2",
]
description = "calculator on NiceGUI"
license = {text = "Apache-2.0"}
name = "nicegui-calculator"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.4"

[project.urls]
homepage = "https://github.com/SaitoTsutomu/nicegui-calculator"

[project.scripts]
calculator = "nicegui_calculator:main"

[tool.uv]
dev-dependencies = [
  "pytest>=8.3.4",
]

[tool.mypy]
files = "src"
ignore_missing_imports = true

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
ignore = ["ANN", "C901", "CPY", "D", "DOC", "E501", "PLR0912"]
preview = true
select = ["ALL"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
